--- a/home.html
+++ b/home.html
@@ -1,1 +1,20 @@
 <!DOCTYPE html>
+
+<html lang="en-US">
+	<head>
+			<title>BeastyBlake101</title>
+			
+			<meta charset="utf-8">
+			<meta name="viewport" content="width=device-width, initial-scale=1">
+
+			<link rel="stylesheet" href="/stylesheet.css">
+	</head>
+
+	<body>
+		<div class="blakeimagetop">
+			<div class="topnavbar">
+					
+			</div>
+		</div>
+	</body>
+</html>
